[gd_scene load_steps=16 format=3 uid="uid://c1kr8rxxx5th4"]

[ext_resource type="Script" uid="uid://wijgm4seg182" path="res://assets/scripts/characters/player/player.gd" id="1_dyp2m"]
[ext_resource type="Script" uid="uid://cese66jyrcxy6" path="res://assets/scripts/characters/player/player_controller.gd" id="1_pq8s5"]
[ext_resource type="Script" uid="uid://bisswsux178ff" path="res://assets/scripts/combat_components/health.gd" id="2_gin2a"]
[ext_resource type="AudioStream" uid="uid://dlbofhuv8xv61" path="res://assets/audio/sfx/marching_loop.ogg" id="4_dyp2m"]
[ext_resource type="Texture2D" uid="uid://bf5584cusu47d" path="res://assets/sprites/characters/player characters/jeremy/handsome_hurt.png" id="5_djydg"]
[ext_resource type="Texture2D" uid="uid://b4kkxxgc2u0kr" path="res://assets/sprites/characters/player characters/jeremy/handsome_idle.png" id="5_mk55u"]
[ext_resource type="Texture2D" uid="uid://dru8k4kvcwfg0" path="res://assets/sprites/characters/player characters/jeremy/handsome_swing.png" id="6_3xnwo"]
[ext_resource type="Texture2D" uid="uid://d031g7ubqxety" path="res://assets/sprites/characters/player characters/jeremy/handsome_walk2.png" id="6_42irl"]
[ext_resource type="Script" uid="uid://dq0fymwjbtvhm" path="res://assets/scripts/combat_components/damage.gd" id="6_kqtwu"]
[ext_resource type="Texture2D" uid="uid://bqkho3u7858ti" path="res://assets/sprites/characters/player characters/jeremy/handsome_walk1.png" id="7_3xnwo"]
[ext_resource type="Script" uid="uid://o6abt6qw55vj" path="res://assets/scripts/combat_components/speed.gd" id="7_6eyoc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6eyoc"]
size = Vector3(3, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_6eyoc"]
size = Vector3(3, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_7n8ao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_djydg")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mk55u")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3xnwo")
}],
"loop": true,
"name": &"punch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mk55u")
}, {
"duration": 1.0,
"texture": ExtResource("6_42irl")
}, {
"duration": 1.0,
"texture": ExtResource("7_3xnwo")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_76oj4"]
radius = 0.25

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_dyp2m")

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("1_pq8s5")
mouse_pos_mask = 8
volume = 0.5
pitch_variance = 0.25

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 11.5, 8)
current = true
fov = 60.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_gin2a")

[node name="Damage" type="Node3D" parent="."]
script = ExtResource("6_kqtwu")
attack_damage = 10

[node name="Area3D" type="Area3D" parent="Damage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage/Area3D"]
shape = SubResource("BoxShape3D_6eyoc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Damage/Area3D/CollisionShape3D"]
mesh = SubResource("BoxMesh_6eyoc")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.130109, 0, 0, 0, 0.130109, 0, 0, 0, 0.5, 0, 1.42279, 0)
sprite_frames = SubResource("SpriteFrames_7n8ao")
animation = &"hurt"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_76oj4")

[node name="MC_Marching" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dyp2m")
pitch_scale = 1.05
bus = &"SFX"

[node name="SpeedComponent" type="Node" parent="."]
script = ExtResource("7_6eyoc")
base_speed = 250.0

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.738, 0)
font_size = 96

[connection signal="on_death" from="HealthComponent" to="." method="_on_death"]
[connection signal="area_entered" from="Damage/Area3D" to="Damage" method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Damage/Area3D" to="Damage" method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Damage/Area3D" to="Damage" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Damage/Area3D" to="Damage" method="_on_area_3d_body_exited"]
